color update onboarding page

--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -41,13 +41,19 @@
 
     /* Colors */
     .category-summary {
-        color: #800080; /* Purple for neutral categories */
+        color: #444444; /* Charcoal gray for neutral categories */
     }
     .dem-summary, .dem-links a {
         color: #007BFF; /* Blue for Democrats */
     }
     .rep-summary, .rep-links a {
         color: #B22222; /* Red for Republicans */
+    }
+    .indep-summary, .indep-links { 
+        color: #800080; /* Purple for Independents */
+    } 
+    .unknown-summary, .unknown-links a { 
+        color: #808080;  /* Gray for Unknowns */
     }
 </style>
 </head>
@@ -179,7 +185,8 @@
 
                         <strong>Step 1: Plug Into the Players & the Process:</strong>  
                         The most practical first step is to follow the people and groups shaping our local elections. Go through the list, follow the available social media pages,
-                        bookmark websites on desktop, and add websites to your home screen on your smartphone.
+                        bookmark websites on desktop, and add websites to your home screen on your smartphone. But don't just follow them, reach out to them with a message to let 
+                        them know you're interested in the process and ask whatever election related questions you may have.
                         <ul class="gi-ul">
                             <li class="gi-ul-li">
 
@@ -253,6 +260,60 @@
                                                     <li><a href="https://www.facebook.com/CumberlandNJGOP" target="_blank">Facebook (Party)</a></li>
                                                     <br>
                                                     <li><a href="https://www.ccrrogop.org" target="_blank">Cumberland County GOP (Party Website)</a></li>
+                                                </ul>
+                                            </div>
+                                        </details>
+
+                                    </div>
+                                </details>
+
+
+                                <details>
+                                    <summary class="category-summary"><strong>Millville City Commissioners</strong></summary>
+                                    <div style="margin-left: 20px;">
+
+                                        <!-- Independent Candidate -->
+                                        <details>
+                                            <summary class="indep-summary">Carole Cossaboon (Independent)</summary>
+                                            <div class="indep-links" style="margin-left: 20px;">
+                                                <p>Follow Carole Cossaboon:</p>
+                                                <ul>
+                                                    <li><a href="https://www.facebook.com/groups/825355689051696" target="_blank">Facebook (Campaign)</a></li>
+                                                    <li><a href="https://www.facebook.com/carole.ehrhartcossaboon" target="_blank">Facebook (Personal)</a></li>
+                                                </ul>
+                                            </div>
+                                        </details>
+
+                                        <!-- Republican Candidate -->
+                                        <details>
+                                            <summary class="rep-summary">Robert McQuade (Republican)</summary>
+                                            <div class="rep-links" style="margin-left: 20px;">
+                                                <p>Follow Robert McQuade:</p>
+                                                <ul>
+                                                    <li><a href="https://www.facebook.com/robert.mcquade.717623/" target="_blank">Facebook (Personal)</a></li>
+                                                </ul>
+                                            </div>
+                                        </details>
+
+                                        <!-- Democratic Candidates -->
+                                        <details>
+                                            <summary class="dem-summary">Patricia Clark-Kears (Democrat)</summary>
+                                            <div class="dem-links" style="margin-left: 20px;">
+                                                <p>Follow Patricia Clark-Kears:</p>
+                                                <ul>
+                                                    <li><a href="https://www.facebook.com/profile.php?id=61550738146589" target="_blank">Facebook (Personal)</a></li>
+                                                </ul>
+                                            </div>
+                                        </details>
+
+                                        <details>
+                                            <summary class="dem-summary">Rachel Green (Democrat)</summary>
+                                            <div class="dem-links" style="margin-left: 20px;">
+                                                <p>Follow Rachel Green:</p>
+                                                <ul>
+                                                    <li><a href="https://www.facebook.com/profile.php?id=61578671877460" target="_blank">Facebook (Campaign)</a></li>
+                                                    <li><a href="https://www.instagram.com/green4millvillectycommissioner/" target="_blank">Instagram</a></li>
+                                                    <li><a href="https://www.rachelgreenformillvillecitycommissioner.com/?fbclid=IwY2xjawLtAyJleHRuA2FlbQIxMABicmlkETFwQWJ5RVdMVldJUElXcFRSAR6pQKzJDpeBPZU8X9LEIxoqQxL7fhR9EfI957I-Bd9dYBUOrRfDtULJOYSq4Q_aem_GbNA5Cmj6BmkqX6VmXFTAg" target="_blank">Campaign Website</a></li>
                                                 </ul>
                                             </div>
                                         </details>
