added party pages to gop onboarding

--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -411,7 +411,30 @@
                                                     <li><a href="https://x.com/eriksimonsene?lang=en" target="_blank">Twitter/X</a></li>
                                                     <br>
                                                     <li><a href="https://www.ccrrogop.org/" target="_blank">Cumberland County GOP (Party Website)</a></li>
+                                                    <br>
                                                 </ul>
+                                                <br>
+                                                    <p><strong>Party & Team Pages:</strong></p>
+                                                <ul>
+                                                    <li><a href="https://www.facebook.com/NJAssemblyGOP" target="_blank">NJ Assembly GOP (Facebook)</a></li>
+                                                    <br>
+                                                    <li><a href="https://www.instagram.com/njassemblygop/" target="_blank">NJ Assembly GOP (Instagram)</a></li>
+                                                    <br>
+                                                    <li><a href="https://www.facebook.com/njsenategop" target="_blank">NJ Senate Republicans (Facebook)</a></li>
+                                                    <br>
+                                                    <li><a href="https://www.instagram.com/njsenategop/?hl=en" target="_blank">NJ Senate Republicans (Instagram)</a></li>
+                                                    <br>
+                                                    <li><a href="https://www.facebook.com/senatortesta" target="_blank">Senator Testa (Political Facebook)</a></li>
+                                                    <br>
+                                                    <li><a href="https://www.facebook.com/TestaForNJ" target="_blank">Senator Testa (Personal Facebook)</a></li>
+                                                    <br>
+                                                    <li><a href="https://www.instagram.com/senatortesta/?hl=en" target="_blank">Senator Testa (Instagram)</a></li>
+                                                </ul>
+                                                <br>
+                                                <p><em>Pro Tip: Senator Testa is one of the most active state legislators on social media. If you want to stay up-to-date on 
+                                                    what’s happening in Trenton as it relates to Cumberland County, follow him — whether you agree with him or not.</em>
+                                                </p>
+                                                
                                             </div>
                                         </details>
 
@@ -424,6 +447,27 @@
                                                     <br>
                                                     <li><a href="https://www.ccrrogop.org/" target="_blank">Cumberland County GOP (Party Website)</a></li>
                                                 </ul>
+                                                <br>
+                                                    <p><strong>Party & Team Pages:</strong></p>
+                                                <ul>
+                                                    <li><a href="https://www.facebook.com/NJAssemblyGOP" target="_blank">NJ Assembly GOP (Facebook)</a></li>
+                                                    <br>
+                                                    <li><a href="https://www.instagram.com/njassemblygop/" target="_blank">NJ Assembly GOP (Instagram)</a></li>
+                                                    <br>
+                                                    <li><a href="https://www.facebook.com/njsenategop" target="_blank">NJ Senate Republicans (Facebook)</a></li>
+                                                    <br>
+                                                    <li><a href="https://www.instagram.com/njsenategop/?hl=en" target="_blank">NJ Senate Republicans (Instagram)</a></li>
+                                                    <br>
+                                                    <li><a href="https://www.facebook.com/senatortesta" target="_blank">Senator Testa (Political Facebook)</a></li>
+                                                    <br>
+                                                    <li><a href="https://www.facebook.com/TestaForNJ" target="_blank">Senator Testa (Personal Facebook)</a></li>
+                                                    <br>
+                                                    <li><a href="https://www.instagram.com/senatortesta/?hl=en" target="_blank">Senator Testa (Instagram)</a></li>
+                                                </ul>
+                                                <br>
+                                                <p><em>Pro Tip: Senator Testa is one of the most active state legislators on social media. If you want to stay up-to-date on 
+                                                    what’s happening in Trenton as it relates to Cumberland County, follow him — whether you agree with him or not.</em>
+                                                </p>
                                             </div>
                                         </details>
 
