--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -194,6 +194,21 @@
                                     <summary class="category-summary"><strong>County Commissioners</strong></summary>
                                     <div style="margin-left: 20px;">
 
+                                        <!-- Meeting Resources -->
+                                        <details>
+                                            <summary class="resource-summary">Meeting Resources</summary>
+                                            <div style="margin-left: 20px;">
+                                                <ul>
+                                                    <li><a href="https://cumberland.iqm2.com/Citizens/default.aspx" target="_blank">Upcoming Meetings (Schedule)</a></li>
+                                                    <br>
+                                                    <li><a href="https://cumberland.iqm2.com/Citizens/calendar.aspx" target="_blank">Agendas & Minutes</a></li>
+                                                    <br>
+                                                    <li><a href="https://cumberland.iqm2.com/Citizens/Media.aspx" target="_blank">Meeting Videos</a></li>
+                                                </ul>
+                                            </div>
+                                        </details>
+                                        <br>
+                                        <!-- Candidates -->
                                         <details>
                                             <summary class="dem-summary">John Capizola (Democrat)</summary>
                                             <div class="dem-links" style="margin-left: 20px;">
