--- a/child_pages/cc-elections/Candidates/mcclellan.html
+++ b/child_pages/cc-elections/Candidates/mcclellan.html
@@ -203,6 +203,7 @@
              <h4 class="sub-heading">Websites</h4>
              <div class="website">
                  
+                <a href="https://www.assemblyld1.com/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Campaign Site</button></a>
                 <a href="https://www.ccrrogop.org/newjersey-assembly" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Party Site</button></a>
                 <a href="https://www.facebook.com/AssemblymanMcClellan/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Facebook</button></a>
                 <a href="https://instagram.com/mcclellanantwan?igshid=MmU2YjMzNjRlOQ==" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Instagram</button></a>
