--- a/child_pages/cc-elections/Candidates/albrecht.html
+++ b/child_pages/cc-elections/Candidates/albrecht.html
@@ -402,67 +402,105 @@
 
      <div class="candidate-agenda">
 
-            <h4 class="sub-heading">Agenda</h4>
-            <div class="experience can-sec">
-                <ul>
-                    <li>Fiscal Management: As a new member of the county Finance Committee, Albrecht is focused on reducing the tax burden using his business acumen.</li>
-                    <br>
-                    <br>
-                    <li>Library and Literacy: Oversaw the largest renovation of the Cumberland County Library in 40 years; advocates using it as a tool to combat illiteracy.</li>
-                    <br>
-                    <br>
-                    <li>Tourism & Recreation: Supports developing a comprehensive county park system centered around the 170-acre County Fairgrounds with trails and natural spaces.</li>
-                    <br>
-                    <br>
-                    <li>Tourism Push: Recognizes the challenges in boosting Cumberland tourism but remains active in the Tourism Council.</li>
-                    <br>
-                    <br>
-                    <li>Commonsense Solutions: Promotes pragmatic, data-informed strategies to improve county rankings in health, literacy, and income.</li>
-                </ul>
-            </div>
-            
-            <h4 class="sub-heading">Issues</h4>
-            <div class="experience can-sec">
-                <ul>
-                    <li>County Jail Debacle: Criticized a $65M bonded jail project that was abandoned after $16M was spent with no valid contracts in place. Frustrated by 
-                        bureaucratic delays and a lack of transparency.</li>
-                    <br>
-                    <br>
-                    <li>Juvenile Detention Center: Opposes plans to shut it down, arguing against outsourcing juvenile services to other counties.</li>
-                    <br>
-                    <br>
-                    <li>Elections: Concerned about the cost of implementing state-mandated election changes, believes financial burden should not fall on local taxpayers.</li>
-                    <br>
-                    <br>
-                    <li>Environmental Regulations: Claims the NJDEP places unfair constraints on Bayshore communities and local industries.</li>
-                    <br>
-                    <br>
-                    <li>Public Safety & Taxation: Proud that under Republican leadership, the county hasn't raised taxes in two years.</li>
-                </ul>
-            </div>
+            <h4 class="sub-heading">Overall Agenda and Positions</h4>
+      <div class="experience can-sec">
+          <ul>
+              <li>
+                  <details>
+                      <summary style="color: blue;"><strong>Infrastructure and Permitting</strong></summary>
+                      <p>
+                          <strong>South Avenue Culvert Replacement</strong><br><br>
+                          This long-delayed Bridgeton culvert rebuild continues to highlight broader infrastructure and permitting issues in Cumberland County. Commissioner Doug Albrecht explained 
+                          in a recent interview that although funding, planning, and contractor coordination are complete, the project remains stuck in limbo due to state and federal red tape. 
+                          Specifically, <strong>seven separate permits</strong> are required—including from the Coast Guard and Historic Preservation—due to remnants of an old railroad in the area.
+                      </p>
+                      <p>
+                          Albrecht sees this as a textbook example of bureaucratic inefficiency, where expert-approved plans can be delayed indefinitely by a single desk in Trenton or Washington. 
+                          He recalled the culvert collapsing two years before Democrats took control of the board and emphasized that the County has done its part—only to be stalled by overlapping 
+                          and often contradictory requirements from the New Jersey DEP and other agencies.
+                      </p>
+                      <p>
+                          He also connected the issue to broader problems with state zoning and planning decisions, arguing that local governments often have little say in how infrastructure fits 
+                          into community development. He described the DEP as operating more like a “hammer than a carrot,” issuing top-down mandates without local input or accountability.
+                      </p>
+                      <p>
+                          Albrecht expressed optimism that Jack Ciattarelli’s proposed reforms to the DEP—shifting it toward a more responsive, rule-based agency—could directly help Cumberland 
+                          County. If elected, Ciattarelli has stated he wants the DEP to act more like a regulatory body that reacts to real problems (like illegal dumping), rather than a 
+                          policy-making authority that creates delays by constantly shifting requirements.
+                      </p>
+                  </details>
+              </li>
+              <br>
+              <li>
+                  <details>
+                      <summary style="color: blue;"><strong>Economic Development</strong></summary>
+                      <p>[Content coming soon]</p>
+                  </details>
+              </li>
+              <br>
+              <li>
+                  <details>
+                      <summary style="color: blue;"><strong>Public Safety</strong></summary>
+                      <p>[Content coming soon]</p>
+                  </details>
+              </li>
+              <br>
+              <li>
+                  <details>
+                      <summary style="color: blue;"><strong>Government Efficiency</strong></summary>
+                      <p>[Content coming soon]</p>
+                  </details>
+              </li>
+              <br>
+              <li>
+                  <details>
+                      <summary style="color: blue;"><strong>Social Services / Public Health</strong></summary>
+                      <p>[Content coming soon]</p>
+                  </details>
+              </li>
+              <br>
+              <li>
+                  <details>
+                      <summary style="color: blue;"><strong>Party Affiliation and Ideology</strong></summary>
+                      <p>[Content coming soon]</p>
+                  </details>
+              </li>
+          </ul>
+      </div>
 
-            <h4 class="sub-heading">Experience</h4>
-                <div class="experience can-sec">
-                    <ul>
-                        <li>Education: B.A. in Political Science and Economics (University of Maryland), M.B.A. (Rowan University)</li>
-                        <br>
-                        <br>
-                        <li>Professional: President and manager of Bob Albrecht Tire & Service, a family-owned business in Vineland</li>
-                        <br>
-                        <br>
-                        <li>Public Service:
-                            <ul>
-                                <li>Vineland City Council (2008–2012), liaison to Electric Utility, Planning Board, and Urban Enterprise Zone</li>
-                                <br>
-                                <br>
-                                <li>Former Director of Vineland Downtown Improvement District</li>
-                                <br>
-                                <br>
-                                <li>Current member of several county councils and committees (Library, Elections, Bayshore, Tourism, Recreation, Finance)</li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
+      <br><br>
+
+      <h4 class="sub-heading">Background and Campaign Message</h4>
+      <div class="experience can-sec">
+          <p>[Content coming soon]</p>
+      </div>
+
+      <br>
+
+      <h4 class="sub-heading">Experience</h4>
+      <div class="experience can-sec">
+          <h4>Organizations</h4>
+          <ul>
+              <li>
+                  <details>
+                      <summary style="color: blue;">[Organization Name]</summary>
+                      [Description coming soon]
+                  </details>
+              </li>
+          </ul>
+
+          <br><br>
+
+          <h4>Professional and Work Background</h4>
+          <ul>
+              <li>
+                  <details>
+                      <summary style="color: blue;">[Position or Role]</summary>
+                      [Description coming soon]
+                  </details>
+              </li>
+          </ul>
+      </div>
    
     </div>
 </div>   
