--- a/child_pages/cc-elections/Candidates/albrecht.html
+++ b/child_pages/cc-elections/Candidates/albrecht.html
@@ -402,12 +402,18 @@
 
      <div class="candidate-agenda">
 
-            <h4 class="sub-heading">Overall Agenda and Positions</h4>
+      <h4 class="sub-heading">Agenda</h4>
+      <div class="experience can-sec">
+          
+      </div>
+
+
+            <h4 class="sub-heading">Issues</h4>
       <div class="experience can-sec">
           <ul>
               <li>
                   <details>
-                      <summary style="color: blue;"><strong>Infrastructure and Permitting</strong></summary>
+                      <summary style="color: blue;"><strong>South Avenue Culvert Replacement</strong></summary>
                       <p>
                           <strong>South Avenue Culvert Replacement</strong><br><br>
                           This long-delayed Bridgeton culvert rebuild continues to highlight broader infrastructure and permitting issues in Cumberland County. Commissioner Doug Albrecht explained 
@@ -433,8 +439,29 @@
               <br>
               <li>
                   <details>
-                      <summary style="color: blue;"><strong>Economic Development</strong></summary>
-                      <p>[Content coming soon]</p>
+                      <summary style="color: blue;"><strong>Middle Mile Broadband</strong></summary>
+                      <p>
+                        The **Middle Mile project** was originally designed to install a high-capacity fiber-optic backbone across Cumberland and Salem 
+                        Counties, enabling local providers to build out last-mile internet to underserved rural areas. Commissioner Doug Albrecht continues 
+                        to defend the initiative as a missed opportunity for Cumberland—not only to modernize broadband access but to **generate revenue** 
+                        for the county by leasing fiber lines to private providers.
+                      </p>
+                      <p>
+                        Albrecht clarified in a recent interview that Salem County has now taken the lead, after Cumberland’s Board declined to prioritize 
+                        the project. Salem secured over $20 million in BEAD (Broadband Equity, Access, and Deployment) funding, and plans to extend 
+                        last-mile service based on the assumption that the Middle Mile infrastructure will still move forward.
+                      </p>
+                      <p>
+                        Albrecht disputes the narrative that the project would have been too costly. He explained that Cumberland’s original commitment 
+                        was estimated at $3.2 million, a figure that could have been covered through a mix of in-kind contributions—such as public safety 
+                        towers from the County’s 700 MHz system—and strategic budgeting. He also argued that early cost estimates were inflated, and the 
+                        County could have broken even or profited over time through line-leasing agreements.
+                      </p>
+                      <p>
+                        Despite limited support from his colleagues, Albrecht still sees Middle Mile broadband as a modern utility—essential for attracting 
+                        data centers, remote work opportunities, and educational equity. Though disappointed that Cumberland stepped back, he remains 
+                        hopeful that Salem’s leadership will eventually bring the project full circle and deliver benefits to the broader region.
+                      </p>
                   </details>
               </li>
               <br>
@@ -470,10 +497,7 @@
 
       <br><br>
 
-      <h4 class="sub-heading">Background and Campaign Message</h4>
-      <div class="experience can-sec">
-          <p>[Content coming soon]</p>
-      </div>
+      
 
       <br>
 
