--- a/child_pages/cc-elections/Candidates/albrecht.html
+++ b/child_pages/cc-elections/Candidates/albrecht.html
@@ -420,15 +420,18 @@
                           in a recent interview that although funding, planning, and contractor coordination are complete, the project remains stuck in limbo due to state and federal red tape. 
                           Specifically, <strong>seven separate permits</strong> are required—including from the Coast Guard and Historic Preservation—due to remnants of an old railroad in the area.
                       </p>
+                      <br>
                       <p>
                           Albrecht sees this as a textbook example of bureaucratic inefficiency, where expert-approved plans can be delayed indefinitely by a single desk in Trenton or Washington. 
                           He recalled the culvert collapsing two years before Democrats took control of the board and emphasized that the County has done its part—only to be stalled by overlapping 
                           and often contradictory requirements from the New Jersey DEP and other agencies.
                       </p>
+                      <br>
                       <p>
                           He also connected the issue to broader problems with state zoning and planning decisions, arguing that local governments often have little say in how infrastructure fits 
                           into community development. He described the DEP as operating more like a “hammer than a carrot,” issuing top-down mandates without local input or accountability.
                       </p>
+                      <br>
                       <p>
                           Albrecht expressed optimism that Jack Ciattarelli’s proposed reforms to the DEP—shifting it toward a more responsive, rule-based agency—could directly help Cumberland 
                           County. If elected, Ciattarelli has stated he wants the DEP to act more like a regulatory body that reacts to real problems (like illegal dumping), rather than a 
@@ -446,23 +449,58 @@
                         to defend the initiative as a missed opportunity for Cumberland—not only to modernize broadband access but to **generate revenue** 
                         for the county by leasing fiber lines to private providers.
                       </p>
+                      <br>
                       <p>
                         Albrecht clarified in a recent interview that Salem County has now taken the lead, after Cumberland’s Board declined to prioritize 
                         the project. Salem secured over $20 million in BEAD (Broadband Equity, Access, and Deployment) funding, and plans to extend 
                         last-mile service based on the assumption that the Middle Mile infrastructure will still move forward.
                       </p>
+                      <br>
                       <p>
                         Albrecht disputes the narrative that the project would have been too costly. He explained that Cumberland’s original commitment 
                         was estimated at $3.2 million, a figure that could have been covered through a mix of in-kind contributions—such as public safety 
                         towers from the County’s 700 MHz system—and strategic budgeting. He also argued that early cost estimates were inflated, and the 
                         County could have broken even or profited over time through line-leasing agreements.
                       </p>
+                      <br>
                       <p>
                         Despite limited support from his colleagues, Albrecht still sees Middle Mile broadband as a modern utility—essential for attracting 
                         data centers, remote work opportunities, and educational equity. Though disappointed that Cumberland stepped back, he remains 
                         hopeful that Salem’s leadership will eventually bring the project full circle and deliver benefits to the broader region.
                       </p>
                   </details>
+              </li>
+              <br>
+              <li>
+                  <summary style="color: blue;"><strong>County Jail Reform & Workforce Stabilization</strong></summary>
+                  <p>
+                    Cumberland County’s long-troubled jail system has entered a new phase of transformation. Commissioner Doug Albrecht outlined 
+                    how the county is now pursuing a regional partnership with Camden County after a failed attempt to create a joint facility with 
+                    Salem and Gloucester. He framed the Camden deal as the most <strong>viable option currently on the table</strong>—one that would 
+                    reduce travel and overtime costs, improve workforce conditions, and allow Cumberland to share long-term operational expenses with 
+                    neighboring counties.
+                  </p>
+                  <br>
+                  <p>
+                    In the short term, Albrecht says the deal would let Cumberland transfer inmates to Camden without the logistical nightmare of 
+                    midnight pickups in Hudson County, where many inmates are currently housed. In the long term, Camden is planning a multi-county 
+                    complex where Cumberland would have a vote in key decisions and staffing roles for its officers. Albrecht stressed that his main 
+                    concern is making sure Cumberland’s correctional staff and inmate needs are treated fairly under any future arrangement.
+                  </p>
+                  <br>
+                  <p>
+                    The failed Salem project left behind a controversial <strong>$16 million concrete slab</strong> and roughly <strong>$60 million 
+                    in bonded funds</strong>. Albrecht explained that while the slab can’t support a jail, it may still serve as the foundation for 
+                    a consolidated government building. This would bring scattered departments under one roof—improving efficiency, eliminating lease 
+                    costs, and making better use of existing infrastructure like water, sewer, and HVAC systems already installed on site.
+                  </p>
+                  <br>
+                  <p>
+                    Albrecht emphasized that the bonded funds are not lost—they’re still collecting interest and could be redirected to meet urgent 
+                    space and staffing needs in the county. He’s also advocated for practical renovations to the existing jail, including HVAC upgrades, 
+                    door repairs, and general maintenance, to ensure safer working conditions while the long-term solution develops.
+                  </p>
+                </details>
               </li>
               <br>
               <li>
