--- a/child_pages/cc-elections/Candidates/albrecht.html
+++ b/child_pages/cc-elections/Candidates/albrecht.html
@@ -404,7 +404,38 @@
 
       <h4 class="sub-heading">Agenda</h4>
       <div class="experience can-sec">
-          
+          <ul>
+              <li>
+                <details>
+                  <summary style="color: blue;"><strong>Literacy & Library Revitalization</strong></summary>
+                  <p>
+                    As liaison to the Cumberland County Library Board, Commissioner Doug Albrecht has championed literacy as a cornerstone of community 
+                    development. Under his leadership, the county completed its most significant library renovation in over four decades—transforming the 
+                    facility into a modern, multi-purpose resource center. Albrecht sees the library not just as a place for books, but as a hub for 
+                    lifelong learning, digital access, and family-friendly programming.
+                  </p>
+                  <br>
+                  <p>
+                    Renovations included moving the children’s section to a safer, lower level; upgrading security and layout for ease of use; expanding 
+                    access to technology including laptops and digital media; and creating flexible spaces for teens, small-group activities, and adult 
+                    education programs. The library now hosts hundreds of events each year—from GED prep and computer literacy to yoga and cultural 
+                    programming—ensuring that residents of all ages have pathways to engagement and learning.
+                  </p>
+                  <br>
+                  <p>
+                    Albrecht also supports plans for a new accessible playground, Jake’s Park, located directly in front of the library. The park will 
+                    feature outdoor story panels that tie into literacy-themed programming, encouraging families to interact with the library during 
+                    playtime. Construction is expected to begin in late 2025.
+                  </p>
+                  <br>
+                  <p>
+                    In the longer term, Albrecht had pursued a grant-funded satellite library and visitor center in Maurice River Township to serve 
+                    outlying communities with no school libraries and few public resources. While that grant was unexpectedly rescinded, he continues 
+                    to advocate for the project, believing it could boost literacy and create a much-needed civic space in the southern part of the 
+                    county. He remains committed to the idea that modern libraries can serve as community anchors—supporting education, workforce 
+                    development, and civic engagement.
+                  </p>
+                </details>
       </div>
 
 
@@ -415,7 +446,6 @@
                   <details>
                       <summary style="color: blue;"><strong>South Avenue Culvert Replacement</strong></summary>
                       <p>
-                          <strong>South Avenue Culvert Replacement</strong><br><br>
                           This long-delayed Bridgeton culvert rebuild continues to highlight broader infrastructure and permitting issues in Cumberland County. Commissioner Doug Albrecht explained 
                           in a recent interview that although funding, planning, and contractor coordination are complete, the project remains stuck in limbo due to state and federal red tape. 
                           Specifically, <strong>seven separate permits</strong> are required—including from the Coast Guard and Historic Preservation—due to remnants of an old railroad in the area.
@@ -472,6 +502,7 @@
               </li>
               <br>
               <li>
+                <details>
                   <summary style="color: blue;"><strong>County Jail Reform & Workforce Stabilization</strong></summary>
                   <p>
                     Cumberland County’s long-troubled jail system has entered a new phase of transformation. Commissioner Doug Albrecht outlined 
