--- a/child_pages/cc-elections/Candidates/simmons.html
+++ b/child_pages/cc-elections/Candidates/simmons.html
@@ -63,7 +63,7 @@
                                     <li class="link"><a href="../cc-elections/commercial_school_board_2024.html">Commercial Township School Board</a></li>
                                     <li class="link"><a href="../cc-elections/fairfield_school_board_2024.html">Fairfield Township School Board</a></li>
                                     <li class="link"><a href="../cc-elections/lawrence_school_board_2024.html">Lawrence Township School Board</a></li> -->
-                                    <li class="link"><a href="../cc-elections/vsb_2024.html">Vineland School Board</a></li>
+                                    <li class="link"><a href="../../../cc-elections/vsb_2024.html">Vineland School Board</a></li>
                                 </div>
                             </div>
     
