--- a/child_pages/cc-elections/Candidates/albrecht.html
+++ b/child_pages/cc-elections/Candidates/albrecht.html
@@ -254,7 +254,7 @@
             <button id="quick-summary-reopen" class="quick-sum">quick summary</button>
 
              <div class="election-date">
-                 <p>This election is on November 5th, 2025</p>
+                 <p>This election is on November 4th, 2025</p>
              </div>
 
              <div class="animal-box">
@@ -436,6 +436,58 @@
                     development, and civic engagement.
                   </p>
                 </details>
+              </li>
+              <br>
+              <li>
+              <details> 
+                <summary style="color: blue;"><strong>Health Outcomes and County Services</strong></summary> 
+                <p> Commissioner Doug Albrecht acknowledges that Cumberland County has consistently ranked last among New Jersey’s 21 counties in terms of 
+                  health outcomes. He says this has been a long-standing concern and one of the reasons he originally ran for office. While no sudden 
+                  turnaround has occurred, Albrecht cites a slight shift—from 21st to 20th—in county health rankings during his early tenure as Freeholder
+                   Director as a sign that some forward movement may be possible when resources are applied wisely. He’s careful not to overstate this 
+                   shift, describing it as a small sign that “maybe we did something right.” 
+                </p> 
+                <br>
+                <p> Albrecht connects this potential progress to broader fiscal and staffing reforms, such as finalizing union contracts that had gone 
+                  unresolved and improving conditions at the county jail. He argues that supporting public employees and retaining experienced staff—including 
+                  in health and safety-related positions—can lead to more stable and effective service delivery. 
+                </p> 
+                <br>
+                <p> He also emphasizes the importance of inter-municipal cooperation and emergency preparedness as part of overall public well-being. 
+                  Examples include the Sheriff’s Office temporarily assisting local police departments and municipalities lending emergency vehicles in times 
+                  of crisis. Albrecht sees this as evidence that county-level coordination contributes to resilience, which plays a role in public health 
+                  and safety. 
+                </p> 
+              </details>
+              </li>
+              <br>
+              <li>
+                <details> <summary style="color: blue;"><strong>Income Per Household and Economic Stability</strong></summary> 
+                  <p> Commissioner Doug Albrecht frames Cumberland County’s consistently low ranking in income per household as a reflection of deeper 
+                    structural challenges. Rather than treating income as an isolated statistic, he views it as the result of broader dysfunction—issues 
+                    like inadequate staffing in county government, slow project management, and missed economic opportunities. He argues that these 
+                    inefficiencies have made it harder to attract and retain businesses and residents, which in turn affects household income levels 
+                    across the region. 
+                  </p> 
+                  <br>
+                  <p> Albrecht’s approach to improving income levels involves modernizing county operations and increasing overall capacity. He notes that 
+                    prior to his tenure as Freeholder Director, the county was slow to execute even basic capital improvement projects, such as paving 
+                    parking lots or completing building repairs. His administration pushed to complete these overdue tasks and bring on project management 
+                    support, laying the groundwork for larger investments. 
+                  </p> 
+                  <br>
+                  <p> One area he emphasizes is retaining institutional knowledge by treating county employees better—particularly those in skilled or 
+                    hard-to-replace roles. By settling multiple union contracts and improving morale, Albrecht believes the county is better positioned 
+                    to serve the public efficiently and compete for outside funding. 
+                  </p> 
+                  <br>
+                  <p> He also points to efforts to bring in federal and state funding for infrastructure and development—such as the Middle Mile broadband 
+                    project and public safety upgrades—as part of a longer-term strategy to make Cumberland County a more viable place for job growth. 
+                    These steps, he argues, are beginning to show results: the county has reportedly gained $1 billion in ratables and lowered its tax rate 
+                    by five cents, which he sees as a sign of growing fiscal health. In his view, raising household income requires strengthening the 
+                    foundational services and systems that make economic development possible in the first place. </p> 
+                </details>
+              </li>
       </div>
 
 
